Authenticating users using OAuth2.0

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,9 @@
     <hr>
     <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
     <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
-
+    <a class="" href="/auth/google" role="button">
+        <img src="css/google.png" width="43" height="43">
+    </a>
   </div>
 </div>
 
